Retocando detalles del FrontEnd.

--- a/MedicalAppointment.Web/Views/Status/Index.cshtml
+++ b/MedicalAppointment.Web/Views/Status/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>List Statuses</h1>
+<h1>Status List</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
