--- a/MedicalAppointment.Web/Views/Appointments/Edit.cshtml
+++ b/MedicalAppointment.Web/Views/Appointments/Edit.cshtml
@@ -1,10 +1,10 @@
-﻿@model MedicalAppointment.Application.Dtos.appointments.Appointments.AppointmentsUpdateDto
+﻿@model MedicalAppointment.Persistance.Models.appointments.AppointmentsModel
 
 @{
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit Appointments</h1>
+<h1>Edit Appointment</h1>
 
 <hr />
 <div class="row">
@@ -15,11 +15,6 @@
                 <label asp-for="AppointmentID" class="control-label"></label>
                 <input asp-for="AppointmentID" class="form-control" />
                 <span asp-validation-for="AppointmentID" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UpdateAt" class="control-label"></label>
-                <input asp-for="UpdateAt" class="form-control" />
-                <span asp-validation-for="UpdateAt" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="PatientID" class="control-label"></label>
@@ -40,6 +35,12 @@
                 <label asp-for="StatusID" class="control-label"></label>
                 <input asp-for="StatusID" class="form-control" />
                 <span asp-validation-for="StatusID" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="UpdateAt" class="control-label"></label>
+                <input asp-for="UpdateAt" class="form-control" />
+                <span asp-validation-for="UpdateAt" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
