--- a/MedicalAppointment.Web/Views/Appointments/Index.cshtml
+++ b/MedicalAppointment.Web/Views/Appointments/Index.cshtml
@@ -61,9 +61,8 @@
                 @Html.DisplayFor(modelItem => item.UpdateAt)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Edit", "Edit", new { id=item.AppointmentID }) |
+                @Html.ActionLink("Details", "Details", new { id=item.AppointmentID }) 
             </td>
         </tr>
 }
