--- a/MedicalAppointment.Web/Views/Roles/Details.cshtml
+++ b/MedicalAppointment.Web/Views/Roles/Details.cshtml
@@ -7,7 +7,6 @@
 <h1>Roles Details</h1>
 
 <div>
-    <h4>RolesModel</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -22,10 +21,27 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.RoleName)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.CreatedAt)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.CreatedAt)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.UpdatedAt)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.UpdatedAt)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.IsActive)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.IsActive)
+        </dd>
     </dl>
 </div>
 <div>
     @Html.ActionLink("Edit", "Edit", new { id = Model.RoleID }) |
     <a asp-action="Index">Back to List</a>
 </div>
-
