--- a/MedicalAppointment.Web/Views/Shared/_Layout.cshtml
+++ b/MedicalAppointment.Web/Views/Shared/_Layout.cshtml
@@ -40,6 +40,18 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Status" asp-action="Index">Statuses</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="StatusAdm" asp-action="Index">Status Api</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="RolesAdm" asp-action="Index">Roles Api</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="NotificationsAdm" asp-action="Index">Notifications Api</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="DoctorAvailabilityAdm" asp-action="Index">DoctorAvailability Api</a>
+                        </li>
 
                     </ul>
                 </div>
