--- a/MedicalAppointment.Web/Views/Shared/_Layout.cshtml
+++ b/MedicalAppointment.Web/Views/Shared/_Layout.cshtml
@@ -52,6 +52,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="DoctorAvailabilityAdm" asp-action="Index">DoctorAvailability Api</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AppointmentsAdm" asp-action="Index">Appointments Api</a>
+                        </li>
 
                     </ul>
                 </div>
