--- a/MedicalAppointment.Web/Views/StatusAdm/Edit.cshtml
+++ b/MedicalAppointment.Web/Views/StatusAdm/Edit.cshtml
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="StatusID" class="control-label"></label>
-                <input asp-for="StatusID" class="form-control" />
+                <input asp-for="StatusID" class="form-control" readonly />
                 <span asp-validation-for="StatusID" class="text-danger"></span>
             </div>
             <div class="form-group">
