--- a/MedicalAppointment.Web/Views/AvailabilityModes/Edit.cshtml
+++ b/MedicalAppointment.Web/Views/AvailabilityModes/Edit.cshtml
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="SAvailabilityModeID" class="control-label"></label>
-                <input asp-for="SAvailabilityModeID" class="form-control" />
+                <input asp-for="SAvailabilityModeID" class="form-control" readonly/>
                 <span asp-validation-for="SAvailabilityModeID" class="text-danger"></span>
             </div>
             <div class="form-group">
