--- a/MedicalAppointment.Web/Views/Specialties/Edit.cshtml
+++ b/MedicalAppointment.Web/Views/Specialties/Edit.cshtml
@@ -13,7 +13,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="SpecialtyID" class="control-label"></label>
-                <input asp-for="SpecialtyID" class="form-control" />
+                <input asp-for="SpecialtyID" class="form-control" readonly/>
                 <span asp-validation-for="SpecialtyID" class="text-danger"></span>
             </div>
             <div class="form-group">
