--- a/MedicalAppointment.Web/Views/DoctorAvailability/Edit.cshtml
+++ b/MedicalAppointment.Web/Views/DoctorAvailability/Edit.cshtml
@@ -13,7 +13,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="AvailabilityID" class="control-label"></label>
-                <input asp-for="AvailabilityID" class="form-control" />
+                <input asp-for="AvailabilityID" class="form-control" readonly/>
                 <span asp-validation-for="AvailabilityID" class="text-danger"></span>
             </div>
             <div class="form-group">
